kube/ingress.yaml
apiVersion: extensions/v1beta1
  #networking.k8s.io/v1beta1
  #extensions/v1beta1
kind: Ingress
metadata:
  name: web
  namespace: default
  annotations:
    #kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    #nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  rules:
  - http:
      paths:
      #- path: /foo
        #backend:
       #   serviceName: kube-foo-svc
        #  servicePort: 80
      - path: /foo(/|$)(.*)
        backend:
          serviceName: kube-foo-svc
          servicePort: 80
     # - path: /bar
       # backend:
       #   serviceName: kube-bar-svc
        #  servicePort: 80
      - path: /bar(/|$)(.*)
        backend:
          serviceName: kube-bar-svc
          servicePort: 80
